Job Application for Talent Management Data Analyst at Agoda. Job Application for Senior Data Analyst - Strategy & Operations at JUUL Labs. Job Application for Biostatistician  at JUUL Labs. Job Application for Senior Statistical Programmer  at JUUL Labs. Job Application for Statistical Programmer  at JUUL Labs. Job Application for Data Analyst at Thirty Madison. Principal Biostatistician - Syneos Health Careers. Principal Biostatistician - Syneos Health Careers. Sr Statistical Programmer - Syneos Health Careers. Senior Clinical Data Analyst - St. Joseph Health Careers. SEGA Europe Limited Careers - Data Analyst. Quality Assurance Data Analyst - Bossanova Robotics - Career Page. TrendKite/Cision - Data Quality Analyst. Cision EMIA Careers - Data Analyst. Data Analyst - TIAA Careers. Data Analyst  I - PRO Unlimited @ Facebook - Career Page. Data Analyst - The Plum Guide. Hugo & Cat Limited - Jobs: Data and SEO Analyst (Contract / Contract to Perm) - Apply online. Hobsons Careers - Senior Sales Operations Data Analyst. Veristat Careers - Manager, Statistical Programming. The Shade Store Careers - Business and Data Analyst. Bosch Group Praktikant*in im Bereich hochautomatisiertes Fahren - Machine Learning / Data-Analysis | SmartRecruiters. Valley Health Careers - Clinical Data Analyst. IBI Group Data Analyst/ Data Scientist (Corporate Systems) | SmartRecruiters. Principal Biostatistician - Syneos Health Careers. Principal Biostatistician - Syneos Health Careers. Sr Statistical Programmer - Syneos Health Careers. Medidata Solutions Careers - Sales Compensation Analyst. Bill.com - Senior Risk Data Analyst. Pilmico Foods Corporation Digital Data Analyst | SmartRecruiters. riskmethods - Jobs: Data Analyst - Apply online. Sr Statistician. Marketplace Data Analyst - ZALORA SEA - Career Page. Strategic Insight Junior Data Analyst | SmartRecruiters. Principal Biostatistician - PPD Careers. Massive Insights Statistician | SmartRecruiters. Digital Marketing Data Analyst - Napervi

--- a/data-analyst.html
+++ b/data-analyst.html
@@ -116,7 +116,7 @@
 <p>3 days ago ... Creating automated ways with the help of our data engineer to pipe data such as 
 targets and schedules. Building dashboards within Google Data Studio so our?...</p>
 <hr/>
-<h5><a href='https://hugo-and-cat-limited.workable.com/j/629A753D6B'>Hugo & Cat Limited - Jobs: Data and SEO Analyst (Contract / Contract to Perm) - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://hugo-and-cat-limited.workable.com/j/629A753D6B'>Hugo & Cat Limited - Jobs: Data and SEO Analyst (Contract / Contract to Perm) - Apply online</a></h5> 
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -140,7 +140,7 @@ targets and schedules. Building dashboards within Google Data Studio so our?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/IBIGroup/743999692398884-data-analyst-data-scientist-corporate-systems-'>IBI Group Data Analyst/ Data Scientist (Corporate Systems) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/IBIGroup/743999692398884-data-analyst-data-scientist-corporate-systems-'>IBI Group Data Analyst/ Data Scientist (Corporate Systems) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Toronto, ON Canada</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -152,7 +152,7 @@ targets and schedules. Building dashboards within Google Data Studio so our?...<
 <p><span class="badge badge-light">North America</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://syneoshealth.referrals.selectminds.com/jobs/sr-statistical-programmer-30233'>Sr Statistical Programmer - Syneos Health Careers</a></h5> 
+<h5><a href='https://syneoshealth.referrals.selectminds.com/jobs/sr-statistical-programmer-30233'>Sr Statistical Programmer - Syneos Health Careers</a></h5> 
 <p><span class="badge badge-light">North America</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -170,7 +170,7 @@ related technical field; Experience using statistics and machine learning to sol
 <p><span class="badge badge-light">Philippines</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.workable.com/j/11C588F09E'>riskmethods - Jobs: Data Analyst - Apply online</a></h5> 
+<h5><a href='https://www.workable.com/j/11C588F09E'>riskmethods - Jobs: Data Analyst - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 18, 2019 ... Apply online for the job of Data Analyst at riskmethods.</p>
 <hr/>
@@ -191,7 +191,7 @@ deriving value from sparse data to auction theory and game theory all with the?.
 <p><span class="badge badge-light">North Carolina, United States</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/MassiveInsights/743999682529713-statistician'>Massive Insights Statistician | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/MassiveInsights/743999682529713-statistician'>Massive Insights Statistician | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -256,7 +256,7 @@ Ergasias SA.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Jul 18, 2019 ... Apply online for the job of Marketing Data Analyst at Softheon.</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/nubank/jobs/1776014'>Job Application for Data Analyst at Nubank</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/nubank/jobs/1776014'>Job Application for Data Analyst at Nubank</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... Being a Data Analyst at Nubank is different than the average Data Analyst 
 position. We optimize for long term value by focusing on engineering as opposed 
@@ -294,7 +294,7 @@ time?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PSICRO/743999692163016-senior-statistician'>PSI CRO Senior Statistician | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/PSICRO/743999692163016-senior-statistician'>PSI CRO Senior Statistician | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -302,7 +302,7 @@ time?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/PublicisGroupe/743999692244858-senior-analyst-data-and-analysis'>Publicis Groupe Senior Analyst, Data and Analysis | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PublicisGroupe/743999692244858-senior-analyst-data-and-analysis'>Publicis Groupe Senior Analyst, Data and Analysis | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -333,7 +333,7 @@ LexisNexis to include tactical, strategic, administrative, and operational...</p
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/urbanairship/jobs/1793839'>Job Application for Marketing Data Analyst at Airship</a></h5> 
+<h5><a href='https://boards.greenhouse.io/urbanairship/jobs/1793839'>Job Application for Marketing Data Analyst at Airship</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -361,7 +361,7 @@ American?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-25</p>
 <hr/>
-<h5><a href='https://titikpintar.recruitee.com/o/growth-hacker-data-analyst'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://titikpintar.recruitee.com/o/growth-hacker-data-analyst'>
       Growth Hacker / Data analyst - Titik Pintar
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -380,7 +380,7 @@ Berlin (published: 15.05.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/premisehealth/job/o8cBafwP'>Premise Health Careers - Member Health Management Data Analyst</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/premisehealth/job/o8cBafwP'>Premise Health Careers - Member Health Management Data Analyst</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -388,7 +388,7 @@ Berlin (published: 15.05.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light">Noida</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/clearwateranalytics/jobs/4369781002'>Job Application for Financial Data Analyst at Clearwater Analytics</a></h5> 
+<h5><a href='https://boards.greenhouse.io/clearwateranalytics/jobs/4369781002'>Job Application for Financial Data Analyst at Clearwater Analytics</a></h5> 
 <p><span class="badge badge-light">Noida</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -400,7 +400,7 @@ Berlin (published: 15.05.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Numberly/743999692250175-data-analyst-senior-insight-analytics'>Numberly Data Analyst Senior - Insight & Analytics | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Numberly/743999692250175-data-analyst-senior-insight-analytics'>Numberly Data Analyst Senior - Insight & Analytics | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -441,7 +441,7 @@ Stuart.</p>
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Apply online for the job of Senior Data Analyst, Product at The Telegraph.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://owlin.recruitee.com/o/data-analyst-parttime'>
+<h5><a href='https://owlin.recruitee.com/o/data-analyst-parttime'>
       Data analyst - part-time - Owlin
     </a></h5> 
 <p><span class="badge badge-light">Amsterdam, Netherlands</span></p>
@@ -459,7 +459,7 @@ Stuart.</p>
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
-<h5><a href='https://softheon.workable.com/j/D162576C55'>Softheon - Jobs: Marketing Data Analyst - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://softheon.workable.com/j/D162576C55'>Softheon - Jobs: Marketing Data Analyst - Apply online</a></h5> 
 <p><span class="badge badge-light">New York, United States</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
