--- a/software.html
+++ b/software.html
@@ -175,7 +175,7 @@
 <p><span class="badge badge-light">Toronto, Ontario, Canada</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://seequent.workable.com/j/D9E5242BA4'>Seequent - Jobs: Software Developer - Apply online</a></h5> 
+<h5><a href='https://seequent.workable.com/j/D9E5242BA4'>Seequent - Jobs: Software Developer - Apply online</a></h5> 
 <p><span class="badge badge-light">Toronto, Ontario, Canada</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -191,7 +191,7 @@
 <p><span class="badge badge-light">Boston, Massachusetts</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/starry/jobs/4367384002'>Job Application for Principal System Software Engineer (Linux) at Starry</a></h5> 
+<h5><a href='https://boards.greenhouse.io/starry/jobs/4367384002'>Job Application for Principal System Software Engineer (Linux) at Starry</a></h5> 
 <p><span class="badge badge-light">Boston, Massachusetts</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -203,7 +203,7 @@
 <p><span class="badge badge-light">Vancouver</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://activision.referrals.selectminds.com/jobs/junior-software-engineer-4038'>Junior Software Engineer -  Activision Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://activision.referrals.selectminds.com/jobs/junior-software-engineer-4038'>Junior Software Engineer -  Activision Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -239,7 +239,7 @@
 <p><span class="badge badge-light">Mexico</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/GBM1/743999685088960-head-of-software-engineering-financial-services-platform-'>GBM Head of Software Engineering (Financial Services Platform) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/GBM1/743999685088960-head-of-software-engineering-financial-services-platform-'>GBM Head of Software Engineering (Financial Services Platform) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Mexico</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -287,7 +287,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/argo/jobs/1794586'>Job Application for Lead Software Engineer, Simulation at Argo AI</a></h5> 
+<h5><a href='https://boards.greenhouse.io/argo/jobs/1794586'>Job Application for Lead Software Engineer, Simulation at Argo AI</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -312,7 +312,7 @@ Services division. This Senior Software Engineer will architect, design, build?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://recruit.hirebridge.com/v3/application/applink.aspx?cid=7801&jid=498542&source=builtin.com'>Senior Software Engineer - Java/ Scala</a></h5> 
+<h5><a href='https://recruit.hirebridge.com/v3/application/applink.aspx?cid=7801&jid=498542&source=builtin.com'>Senior Software Engineer - Java/ Scala</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>23 hours ago ... Senior Software Engineer - Java/ Scala. Denver. Enter your email address and 
 click next. Email Address Please enter a valid email address Please enter a?...</p>
@@ -326,7 +326,7 @@ places to eat worldwide and 450+ million unique monthly visitors, we help?...</p
 <p><span class="badge badge-light">Toronto</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://loginext.recruiterbox.com/jobs/fk01is7/'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://loginext.recruiterbox.com/jobs/fk01is7/'>
     Senior Software Developer at LogiNext
 </a></h5> 
 <p><span class="badge badge-light">Mumbai</span></p>
@@ -411,7 +411,7 @@ Generation.</p>
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... Apply online for the job of Ruby Software Engineer at Farmdrop.</p>
 <hr/>
-<h5><a href='https://ratesetter.workable.com/j/A219608FCA?viewed=true'>RateSetter - Jobs: Senior Software Engineer (Full Stack) - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ratesetter.workable.com/j/A219608FCA?viewed=true'>RateSetter - Jobs: Senior Software Engineer (Full Stack) - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... Apply online for the job of Senior Software Engineer (Full Stack) at RateSetter.</p>
 <hr/>
@@ -435,7 +435,7 @@ Generation.</p>
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999692364239-senior-software-developer-c-c-for-automated-driving'>Bosch Group Senior Software Developer (C/C++) for Automated Driving | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999692364239-senior-software-developer-c-c-for-automated-driving'>Bosch Group Senior Software Developer (C/C++) for Automated Driving | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Abstatt, Germany</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
