UI concept designer - Nacar Careers     . Bravium Consulting Careers - Salesforce UI/UX Designer. Web/UI designer - New service development - Rakuten Careers. Delta Dental - Senior Software Engineer - UI/UX. Job @ Althen Hensel - RECRUITMENT SOLUTIONS (Hambu... | JOIN. Job @ Althen Hensel - RECRUITMENT SOLUTIONS (Stutt... | JOIN. Job @ Althen Hensel - RECRUITMENT SOLUTIONS (Kempe... | JOIN. Application Developer - Cupid - Jobs@UIOWA Careers. Clinical/HC Research Associate - Jobs@UIOWA Careers. Job Search Results - Jobs@UIOWA Careers. Job Search Results - Jobs@UIOWA Careers. Job Search Results - Jobs@UIOWA Careers. Nursing Practice Leader - Nursing Education - Jobs@UIOWA Careers. Job @ NIST (Berlin): Internship UI/UX | JOIN. Ingram Micro Careers - Manager, UX/UI Design. Farfetch Careers - Senior UI/UX Product Designer. Job @ Enterprise Bot (Bengaluru): UI Developer - H... | JOIN. UX/UI Designer - Codal - Career Page. Senior UX/UI Designer - Codal - Career Page. SafeAuto - UI Solution Architect. UI Designer 2 | Current Opportunities. Futrli - Jobs: Lead UI Engineer - Apply online. Netflix - Senior UI Engineer - Netflix Logging and Analytics Platform. Identity and Access Management Developer - Jobs@UIOWA Careers. Job Application for UI / Full Stack / Sr. Software Engineer  at hc1.com. Ubisoft UI Artist | SmartRecruiters. Intouch Group - ASSOCIATE TALENT ACQUISITION MANAGER. PA/ARNP Hospitalist - Jobs@UIOWA Careers. Clinical Technician I - Jobs@UIOWA Careers. Staff Nurse - 2nd Shift - Jobs@UIOWA Careers. Job Search Results - Jobs@UIOWA Careers. Job Search Results - Jobs@UIOWA Careers. Job Search Results - Jobs@UIOWA Careers. Job Search Results - Jobs@UIOWA Careers. Job Search Results - Jobs@UIOWA Careers. Job Search Results - Jobs@UIOWA Careers. Job Search Results - Jobs@UIOWA Careers. Job Search Results - Jobs@UIOWA Careers. Job Search Results - Jobs@UIOWA Careers. Job Search Results - Jobs@UIOWA Careers. Staff Nurse - Stead Family Operating Room 90% - Jobs@UIOWA Caree

--- a/ui.html
+++ b/ui.html
@@ -40,6 +40,16 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://nacar.recruitee.com/o/ui-concept-designer'>
+      UI concept designer - Nacar Careers
+    </a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-28</p>
+<hr/>
+<h5><a href='https://jobs.jobvite.com/braviumconsulting/job/oBnEafww'>Bravium Consulting Careers - Salesforce UI/UX Designer</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-28</p>
+<hr/>
 <h5><a href='https://rakuten.referrals.selectminds.com/jobs/web-ui-designer-new-service-development-9710'>Web/UI designer - New service development - Rakuten Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
@@ -130,7 +140,7 @@
 development, and service provisioning and de-provisioning. This position will 
 involve?...</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/hc1/jobs/1794564'>Job Application for UI / Full Stack / Sr. Software Engineer  at hc1.com</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/hc1/jobs/1794564'>Job Application for UI / Full Stack / Sr. Software Engineer  at hc1.com</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -170,7 +180,7 @@ involve?...</p>
 <p><span class="badge badge-light">Iowa City, Iowa, United States</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://uiowa.referrals.selectminds.com/jobs/4354/other-jobs-matching/location-only'>Job Search Results - Jobs@UIOWA Careers</a></h5> 
+<h5><a href='https://uiowa.referrals.selectminds.com/jobs/4354/other-jobs-matching/location-only'>Job Search Results - Jobs@UIOWA Careers</a></h5> 
 <p><span class="badge badge-light">Iowa City, Iowa, United States</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -190,11 +200,11 @@ involve?...</p>
 <p><span class="badge badge-light">Iowa City, Iowa, United States</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://uiowa.referrals.selectminds.com/jobs/4360/other-jobs-matching/location-only'>Job Search Results - Jobs@UIOWA Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://uiowa.referrals.selectminds.com/jobs/4360/other-jobs-matching/location-only'>Job Search Results - Jobs@UIOWA Careers</a></h5> 
 <p><span class="badge badge-light">Iowa City, Iowa, United States</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://uiowa.referrals.selectminds.com/jobs/staff-nurse-stead-family-operating-room-90-4352'>Staff Nurse - Stead Family Operating Room 90% - Jobs@UIOWA Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://uiowa.referrals.selectminds.com/jobs/staff-nurse-stead-family-operating-room-90-4352'>Staff Nurse - Stead Family Operating Room 90% - Jobs@UIOWA Careers</a></h5> 
 <p><span class="badge badge-light">Iowa City, Iowa, United States</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -252,7 +262,7 @@ objectively measure impact and optimize engineering processes; Meeting?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/retailindia/jobs/1767781'>Job Application for Senior UI Developer at Endurance International Group - India</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/retailindia/jobs/1767781'>Job Application for Senior UI Developer at Endurance International Group - India</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -279,7 +289,7 @@ usable and valuable to everyone. We are a company filled with people who?...</p>
 <p>4 days ago ... We are seeking a Field Service Technician to join our HUB Parking Technology 
 team. You are an ideal candidate if you have previously worked on parking?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=ossW9fwJ&__jvst=Employee+Referral&__jvsd=s3Hlngwd&__jvsc=Twitter&bid=nEwLTKw3'>ServiceNow Careers - Staff Front End Software Engineer (UI)</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=ossW9fwJ&__jvst=Employee+Referral&__jvsd=s3Hlngwd&__jvsc=Twitter&bid=nEwLTKw3'>ServiceNow Careers - Staff Front End Software Engineer (UI)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-25</p>
 <hr/>
@@ -410,7 +420,7 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ah-recruitment.join.com/jobs/250064-verification-manager-m-f-d'>Job @ Althen Hensel - RECRUITMENT SOLUTIONS (Hambu... | JOIN</a></h5> 
+<h5><a href='https://ah-recruitment.join.com/jobs/250064-verification-manager-m-f-d'>Job @ Althen Hensel - RECRUITMENT SOLUTIONS (Hambu... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
@@ -426,7 +436,7 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
-<h5><a href='https://endios.join.com/jobs/263747-ui-ux-designer-m-w-d-ab-sofort-vollzeit-unbefristet'>Job @ endios (Hamburg): UI-/UX-Designer (m/w/d) ab... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://endios.join.com/jobs/263747-ui-ux-designer-m-w-d-ab-sofort-vollzeit-unbefristet'>Job @ endios (Hamburg): UI-/UX-Designer (m/w/d) ab... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
@@ -441,14 +451,6 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <h5><a href='https://ah-recruitment.join.com/jobs/261318-leiter-hr-service-center-und-grundsatzfragen-m-w-d'>Job @ Althen Hensel - RECRUITMENT SOLUTIONS (L?den... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
-<hr/>
-<h5><a href='https://ah-recruitment.join.com/jobs/256443-senior-consultant-principal-consultant-m-w-d-automotive'>Job @ Althen Hensel - RECRUITMENT SOLUTIONS (Stutt... | JOIN</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-04-05</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/ShopUp/743999692216963-ux-ui-designer'>ShopUp UX/UI Designer | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-24</p>
 <hr/>
 
 
